Interim checkin; first complete shaky version
Signed-off-by: Laird Nelson <ljnelson@gmail.com>